# opencode-autopilot

./: .gitignore  DEV_NOTES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/opencode_autopilot/: __init__.py  cli.py  cli_runner.py  config.py  detector.py  opencode.py  prompts.py  rate_limit.py  runner.py  scaffold.py
src/opencode_autopilot/prompts/: blueprint.j2  build_session.j2  final_session.j2  gg_blueprint.j2  gg_research.j2  run_session.j2  session.j2
src/opencode_autopilot/templates/agents/: autonomous.md  code-review.md  security-review.md
src/opencode_autopilot/templates/skills/: blueprint.md  commit.md  refactor.md  research.md  security-review.md  self-review.md  verify.md
