[project]
name = "opencode-autopilot"
version = "0.1.0b1"
description = "Autonomous overnight engineer for OpenCode projects. Bootstrap, build, and improve while you sleep."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "mystic9t", email = "53944357+mystic9t@users.noreply.github.com" }]
keywords = [
    "opencode",
    "autonomous",
    "agent",
    "ai",
    "coding-agent",
    "overnight",
    "bootstrap",
    "autopilot",
    "big-pickle",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["typer>=0.15.0", "jinja2>=3.1.0"]

[project.urls]
Homepage = "https://github.com/mystic9t/opencode-autopilot"
Repository = "https://github.com/mystic9t/opencode-autopilot"

[project.scripts]
opencode-autopilot = "opencode_autopilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_autopilot"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE"]

[tool.ruff]
target-version = "py312"
line-length = 100
